# filemd

./: .gitignore  Makefile  ideas.md  md.py  md2.py  pyproject.toml  test_metadata.py
commands/: clear.py  get.py  list.py  listtag.py  remove.py  removetag.py  set.py  settag.py  template
filemd/: __init__.py  filemetadata.py  identity.py  metadata.py  metadataerror.py  saverMemory.py  saverYAML.py  savers.py
filemd/drivers/: DriverRemoraYAML.py
filemd2/: __init__.py  filemetadata.py  identity.py  metadata.py
filemd2/drivers/: DriverRemoraYAML.py  __init__.py  driver.py
generators/: __init__.py  generatorAll.py  generatorExif.py  generatorEyeD3.py  generatorFileinfo.py  generatorFiletype.py  generatorHash.py  generatorID3.py  generatorIdentity.py  generatorImageHash.py  generatorMagic.py
generators/nottested/: generatorTaglib.py  generatorTineye.py
sandbox/: test.py
tests/: example.jpg.metadata  example.mp3.metadata  example2.jpg.metadata  gzip.py.gz.metadata  test.sh  test_metadata.py  test_metadata.py.metadata
util/: __init__.py  identity.py  syntax.py
